# Mask-LRP-Package

./: README.md  pyproject.toml  test.py
Transformer_Explanation/: ExplanationGenerator.py  __init__.py  attn_head_stats.py  evaluate_explanability.py
Transformer_Explanation/modules/BERT/: BERT.py
