[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-explanation"          # what users will `pip install`
version = "0.1.0"
description = "Mask-LRP explanation utilities for Transformers"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "you@email.com"}]

# if you have external deps, list them
dependencies = [
    # …
]

[project.urls]
Homepage = "https://github.com/gmihaila/Mask-LRP-Package"

[tool.setuptools]
package-dir = {"" = "."}                  # root based (no /src)
packages = ["Transformer_Explanation", "utils"]    # the folder to install
py-modules = ["evaluate_explainability",
              "attn_head_stats",
              "self_parser"]                       # … any other lone .py files
